<resources>
    <string name="app_name">The Movies</string>
    <string name="image">image</string>
    <string name="movies_name">movies_name</string>
    <string name="movies_year">movies_year</string>
    <string name="title">Title</string>
    <string name="g_nero_de_la_pel_cula">Género de la película</string>
    <string name="datos_de_la_pel_cula">Reseña de la película</string>
    <string name="a_o">Año</string>
    <string name="runtime">runtime</string>
    <string name="director">director</string>
    <string name="country">country</string>
    <string name="plot">plot</string>
    <string name="menu_search">menu_search</string>
</resources>